Compilatori/src/antlr/ScannerParser.java
// $ANTLR 3.4 C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g 2016-05-25 12:10:35

package antlr;
    import util.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class ScannerParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AUTHOR", "BAR", "CHORD", "DIGIT", "HAMMER", "IDENT", "INT", "LETTER", "NEWLINE", "NOTE", "NOTE_D", "PAUSE", "PAUSE_G", "POWERCHORD", "PULLOFF", "SLIDEDOWN", "SLIDEUP", "START", "STRING_LITERAL", "STRUMMING", "TITLE", "WORD", "WS", "'('", "'()'", "')'", "','", "'/'"
    };

    public static final int EOF=-1;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int AUTHOR=4;
    public static final int BAR=5;
    public static final int CHORD=6;
    public static final int DIGIT=7;
    public static final int HAMMER=8;
    public static final int IDENT=9;
    public static final int INT=10;
    public static final int LETTER=11;
    public static final int NEWLINE=12;
    public static final int NOTE=13;
    public static final int NOTE_D=14;
    public static final int PAUSE=15;
    public static final int PAUSE_G=16;
    public static final int POWERCHORD=17;
    public static final int PULLOFF=18;
    public static final int SLIDEDOWN=19;
    public static final int SLIDEUP=20;
    public static final int START=21;
    public static final int STRING_LITERAL=22;
    public static final int STRUMMING=23;
    public static final int TITLE=24;
    public static final int WORD=25;
    public static final int WS=26;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public ScannerParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public ScannerParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return ScannerParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g"; }


    Main principale;
    ParserEnvironment env;

    public void init() {
    	principale = new Main();
    	env = new ParserEnvironment();
    }

    public String getTranslation() {
    	return env.translation.toString();
    }

    public ArrayList<String> getErrors() {
    	return env.errorList;
    }


    public static class start_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "start"
    // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:36:1: start : START title ( author )? bar ( sound )* ;
    public final ScannerParser.start_return start() throws RecognitionException {
        ScannerParser.start_return retval = new ScannerParser.start_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token START1=null;
        ScannerParser.title_return title2 =null;

        ScannerParser.author_return author3 =null;

        ScannerParser.bar_return bar4 =null;

        ScannerParser.sound_return sound5 =null;


        Object START1_tree=null;


        init();

        try {
            // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:40:3: ( START title ( author )? bar ( sound )* )
            // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:41:3: START title ( author )? bar ( sound )*
            {
            root_0 = (Object)adaptor.nil();


            START1=(Token)match(input,START,FOLLOW_START_in_start81); 
            START1_tree = 
            (Object)adaptor.create(START1)
            ;
            adaptor.addChild(root_0, START1_tree);


            pushFollow(FOLLOW_title_in_start83);
            title2=title();

            state._fsp--;

            adaptor.addChild(root_0, title2.getTree());

            // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:41:15: ( author )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==AUTHOR) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:41:15: author
                    {
                    pushFollow(FOLLOW_author_in_start85);
                    author3=author();

                    state._fsp--;

                    adaptor.addChild(root_0, author3.getTree());

                    }
                    break;

            }


            pushFollow(FOLLOW_bar_in_start88);
            bar4=bar();

            state._fsp--;

            adaptor.addChild(root_0, bar4.getTree());

            // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:41:27: ( sound )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==CHORD||LA2_0==HAMMER||LA2_0==NEWLINE||(LA2_0 >= NOTE_D && LA2_0 <= SLIDEUP)||LA2_0==STRUMMING) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:41:27: sound
            	    {
            	    pushFollow(FOLLOW_sound_in_start90);
            	    sound5=sound();

            	    state._fsp--;

            	    adaptor.addChild(root_0, sound5.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "start"


    public static class sound_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "sound"
    // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:44:1: sound : ( note | chord | powerchord | strumming | slideup | slidedown | hammer | pulloff | pause | pause_g | newline );
    public final ScannerParser.sound_return sound() throws RecognitionException {
        ScannerParser.sound_return retval = new ScannerParser.sound_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        ScannerParser.note_return note6 =null;

        ScannerParser.chord_return chord7 =null;

        ScannerParser.powerchord_return powerchord8 =null;

        ScannerParser.strumming_return strumming9 =null;

        ScannerParser.slideup_return slideup10 =null;

        ScannerParser.slidedown_return slidedown11 =null;

        ScannerParser.hammer_return hammer12 =null;

        ScannerParser.pulloff_return pulloff13 =null;

        ScannerParser.pause_return pause14 =null;

        ScannerParser.pause_g_return pause_g15 =null;

        ScannerParser.newline_return newline16 =null;



        try {
            // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:45:3: ( note | chord | powerchord | strumming | slideup | slidedown | hammer | pulloff | pause | pause_g | newline )
            int alt3=11;
            switch ( input.LA(1) ) {
            case NOTE_D:
                {
                alt3=1;
                }
                break;
            case CHORD:
                {
                alt3=2;
                }
                break;
            case POWERCHORD:
                {
                alt3=3;
                }
                break;
            case STRUMMING:
                {
                alt3=4;
                }
                break;
            case SLIDEUP:
                {
                alt3=5;
                }
                break;
            case SLIDEDOWN:
                {
                alt3=6;
                }
                break;
            case HAMMER:
                {
                alt3=7;
                }
                break;
            case PULLOFF:
                {
                alt3=8;
                }
                break;
            case PAUSE:
                {
                alt3=9;
                }
                break;
            case PAUSE_G:
                {
                alt3=10;
                }
                break;
            case NEWLINE:
                {
                alt3=11;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }

            switch (alt3) {
                case 1 :
                    // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:46:3: note
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_note_in_sound106);
                    note6=note();

                    state._fsp--;

                    adaptor.addChild(root_0, note6.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:47:5: chord
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_chord_in_sound112);
                    chord7=chord();

                    state._fsp--;

                    adaptor.addChild(root_0, chord7.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:48:5: powerchord
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_powerchord_in_sound118);
                    powerchord8=powerchord();

                    state._fsp--;

                    adaptor.addChild(root_0, powerchord8.getTree());

                    }
                    break;
                case 4 :
                    // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:49:5: strumming
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_strumming_in_sound124);
                    strumming9=strumming();

                    state._fsp--;

                    adaptor.addChild(root_0, strumming9.getTree());

                    }
                    break;
                case 5 :
                    // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:50:5: slideup
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_slideup_in_sound130);
                    slideup10=slideup();

                    state._fsp--;

                    adaptor.addChild(root_0, slideup10.getTree());

                    }
                    break;
                case 6 :
                    // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:51:5: slidedown
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_slidedown_in_sound136);
                    slidedown11=slidedown();

                    state._fsp--;

                    adaptor.addChild(root_0, slidedown11.getTree());

                    }
                    break;
                case 7 :
                    // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:52:5: hammer
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_hammer_in_sound142);
                    hammer12=hammer();

                    state._fsp--;

                    adaptor.addChild(root_0, hammer12.getTree());

                    }
                    break;
                case 8 :
                    // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:53:5: pulloff
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_pulloff_in_sound148);
                    pulloff13=pulloff();

                    state._fsp--;

                    adaptor.addChild(root_0, pulloff13.getTree());

                    }
                    break;
                case 9 :
                    // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:54:5: pause
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_pause_in_sound154);
                    pause14=pause();

                    state._fsp--;

                    adaptor.addChild(root_0, pause14.getTree());

                    }
                    break;
                case 10 :
                    // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:55:5: pause_g
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_pause_g_in_sound160);
                    pause_g15=pause_g();

                    state._fsp--;

                    adaptor.addChild(root_0, pause_g15.getTree());

                    }
                    break;
                case 11 :
                    // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:56:5: newline
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_newline_in_sound166);
                    newline16=newline();

                    state._fsp--;

                    adaptor.addChild(root_0, newline16.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "sound"


    public static class author_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "author"
    // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:59:1: author : AUTHOR '(' t= WORD ')' ;
    public final ScannerParser.author_return author() throws RecognitionException {
        ScannerParser.author_return retval = new ScannerParser.author_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token t=null;
        Token AUTHOR17=null;
        Token char_literal18=null;
        Token char_literal19=null;

        Object t_tree=null;
        Object AUTHOR17_tree=null;
        Object char_literal18_tree=null;
        Object char_literal19_tree=null;

        try {
            // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:60:3: ( AUTHOR '(' t= WORD ')' )
            // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:61:3: AUTHOR '(' t= WORD ')'
            {
            root_0 = (Object)adaptor.nil();


            AUTHOR17=(Token)match(input,AUTHOR,FOLLOW_AUTHOR_in_author181); 
            AUTHOR17_tree = 
            (Object)adaptor.create(AUTHOR17)
            ;
            adaptor.addChild(root_0, AUTHOR17_tree);


            char_literal18=(Token)match(input,27,FOLLOW_27_in_author183); 
            char_literal18_tree = 
            (Object)adaptor.create(char_literal18)
            ;
            adaptor.addChild(root_0, char_literal18_tree);


            t=(Token)match(input,WORD,FOLLOW_WORD_in_author187); 
            t_tree = 
            (Object)adaptor.create(t)
            ;
            adaptor.addChild(root_0, t_tree);



                                 principale.writeAuthor(t.getText());
                                

            char_literal19=(Token)match(input,29,FOLLOW_29_in_author232); 
            char_literal19_tree = 
            (Object)adaptor.create(char_literal19)
            ;
            adaptor.addChild(root_0, char_literal19_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "author"


    public static class bar_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "bar"
    // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:68:1: bar : BAR '(' a= INT '/' b= INT ')' ;
    public final ScannerParser.bar_return bar() throws RecognitionException {
        ScannerParser.bar_return retval = new ScannerParser.bar_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token a=null;
        Token b=null;
        Token BAR20=null;
        Token char_literal21=null;
        Token char_literal22=null;
        Token char_literal23=null;

        Object a_tree=null;
        Object b_tree=null;
        Object BAR20_tree=null;
        Object char_literal21_tree=null;
        Object char_literal22_tree=null;
        Object char_literal23_tree=null;

        try {
            // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:69:3: ( BAR '(' a= INT '/' b= INT ')' )
            // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:70:3: BAR '(' a= INT '/' b= INT ')'
            {
            root_0 = (Object)adaptor.nil();


            BAR20=(Token)match(input,BAR,FOLLOW_BAR_in_bar247); 
            BAR20_tree = 
            (Object)adaptor.create(BAR20)
            ;
            adaptor.addChild(root_0, BAR20_tree);


            char_literal21=(Token)match(input,27,FOLLOW_27_in_bar249); 
            char_literal21_tree = 
            (Object)adaptor.create(char_literal21)
            ;
            adaptor.addChild(root_0, char_literal21_tree);


            a=(Token)match(input,INT,FOLLOW_INT_in_bar253); 
            a_tree = 
            (Object)adaptor.create(a)
            ;
            adaptor.addChild(root_0, a_tree);


            char_literal22=(Token)match(input,31,FOLLOW_31_in_bar255); 
            char_literal22_tree = 
            (Object)adaptor.create(char_literal22)
            ;
            adaptor.addChild(root_0, char_literal22_tree);


            b=(Token)match(input,INT,FOLLOW_INT_in_bar259); 
            b_tree = 
            (Object)adaptor.create(b)
            ;
            adaptor.addChild(root_0, b_tree);



                                       principale.setBattuta(Integer.valueOf((a!=null?a.getText():null)), Integer.valueOf((b!=null?b.getText():null)));
                                       principale.writeBattuta(Integer.valueOf((a!=null?a.getText():null)), Integer.valueOf((b!=null?b.getText():null)));
                                       principale.writeBar();
                                      

            char_literal23=(Token)match(input,29,FOLLOW_29_in_bar292); 
            char_literal23_tree = 
            (Object)adaptor.create(char_literal23)
            ;
            adaptor.addChild(root_0, char_literal23_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "bar"


    public static class newline_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "newline"
    // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:79:1: newline : NEWLINE '()' ;
    public final ScannerParser.newline_return newline() throws RecognitionException {
        ScannerParser.newline_return retval = new ScannerParser.newline_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token NEWLINE24=null;
        Token string_literal25=null;

        Object NEWLINE24_tree=null;
        Object string_literal25_tree=null;

        try {
            // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:80:3: ( NEWLINE '()' )
            // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:81:3: NEWLINE '()'
            {
            root_0 = (Object)adaptor.nil();


            NEWLINE24=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_newline307); 
            NEWLINE24_tree = 
            (Object)adaptor.create(NEWLINE24)
            ;
            adaptor.addChild(root_0, NEWLINE24_tree);



                       principale.newLine();
                       //principale.writeBar();
                      

            string_literal25=(Token)match(input,28,FOLLOW_28_in_newline324); 
            string_literal25_tree = 
            (Object)adaptor.create(string_literal25)
            ;
            adaptor.addChild(root_0, string_literal25_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "newline"


    public static class title_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "title"
    // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:89:1: title : TITLE '(' t= WORD ')' ;
    public final ScannerParser.title_return title() throws RecognitionException {
        ScannerParser.title_return retval = new ScannerParser.title_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token t=null;
        Token TITLE26=null;
        Token char_literal27=null;
        Token char_literal28=null;

        Object t_tree=null;
        Object TITLE26_tree=null;
        Object char_literal27_tree=null;
        Object char_literal28_tree=null;

        try {
            // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:90:3: ( TITLE '(' t= WORD ')' )
            // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:91:3: TITLE '(' t= WORD ')'
            {
            root_0 = (Object)adaptor.nil();


            TITLE26=(Token)match(input,TITLE,FOLLOW_TITLE_in_title339); 
            TITLE26_tree = 
            (Object)adaptor.create(TITLE26)
            ;
            adaptor.addChild(root_0, TITLE26_tree);


            char_literal27=(Token)match(input,27,FOLLOW_27_in_title341); 
            char_literal27_tree = 
            (Object)adaptor.create(char_literal27)
            ;
            adaptor.addChild(root_0, char_literal27_tree);


            t=(Token)match(input,WORD,FOLLOW_WORD_in_title345); 
            t_tree = 
            (Object)adaptor.create(t)
            ;
            adaptor.addChild(root_0, t_tree);



                                principale.writeTitle(t.getText());
                               

            char_literal28=(Token)match(input,29,FOLLOW_29_in_title371); 
            char_literal28_tree = 
            (Object)adaptor.create(char_literal28)
            ;
            adaptor.addChild(root_0, char_literal28_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "title"


    public static class note_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "note"
    // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:98:1: note : NOTE_D '(' c= INT ',' t= INT ')' ;
    public final ScannerParser.note_return note() throws RecognitionException {
        ScannerParser.note_return retval = new ScannerParser.note_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token c=null;
        Token t=null;
        Token NOTE_D29=null;
        Token char_literal30=null;
        Token char_literal31=null;
        Token char_literal32=null;

        Object c_tree=null;
        Object t_tree=null;
        Object NOTE_D29_tree=null;
        Object char_literal30_tree=null;
        Object char_literal31_tree=null;
        Object char_literal32_tree=null;

        try {
            // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:99:3: ( NOTE_D '(' c= INT ',' t= INT ')' )
            // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:100:3: NOTE_D '(' c= INT ',' t= INT ')'
            {
            root_0 = (Object)adaptor.nil();


            NOTE_D29=(Token)match(input,NOTE_D,FOLLOW_NOTE_D_in_note386); 
            NOTE_D29_tree = 
            (Object)adaptor.create(NOTE_D29)
            ;
            adaptor.addChild(root_0, NOTE_D29_tree);


            char_literal30=(Token)match(input,27,FOLLOW_27_in_note388); 
            char_literal30_tree = 
            (Object)adaptor.create(char_literal30)
            ;
            adaptor.addChild(root_0, char_literal30_tree);


            c=(Token)match(input,INT,FOLLOW_INT_in_note392); 
            c_tree = 
            (Object)adaptor.create(c)
            ;
            adaptor.addChild(root_0, c_tree);


            char_literal31=(Token)match(input,30,FOLLOW_30_in_note394); 
            char_literal31_tree = 
            (Object)adaptor.create(char_literal31)
            ;
            adaptor.addChild(root_0, char_literal31_tree);


            t=(Token)match(input,INT,FOLLOW_INT_in_note398); 
            t_tree = 
            (Object)adaptor.create(t)
            ;
            adaptor.addChild(root_0, t_tree);


            char_literal32=(Token)match(input,29,FOLLOW_29_in_note400); 
            char_literal32_tree = 
            (Object)adaptor.create(char_literal32)
            ;
            adaptor.addChild(root_0, char_literal32_tree);



                                              principale.writeNota(Integer.parseInt((c!=null?c.getText():null)), Integer.parseInt((t!=null?t.getText():null)));
                                             

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "note"


    public static class chord_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "chord"
    // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:106:1: chord : CHORD '(' n= NOTE ')' ;
    public final ScannerParser.chord_return chord() throws RecognitionException {
        ScannerParser.chord_return retval = new ScannerParser.chord_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token n=null;
        Token CHORD33=null;
        Token char_literal34=null;
        Token char_literal35=null;

        Object n_tree=null;
        Object CHORD33_tree=null;
        Object char_literal34_tree=null;
        Object char_literal35_tree=null;

        try {
            // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:107:3: ( CHORD '(' n= NOTE ')' )
            // C:\\Users\\ciuff\\git\\Compilatori_\\Compilatori\\src\\Scanner.g:108:3: CHORD '(' n= NOTE ')'
            {
            root_0 = (Object)adaptor.nil();


            CHORD33=(Token)match(input,CHORD,FOLLOW_CHORD_in_chord451); 
            CHORD33_tree = 
            (Object)adaptor.create(CHORD33)
            ;
            adaptor.addChild(root_0, CHORD33_tree);


            char_literal34=(Token)match(input,27,FOLLOW_27_in_chord453); 
            char_literal34_tree = 
            (Object)adaptor.create(char_literal34)
            ;
            adaptor.addChild(root_0, char_literal34_tree);


            n=(Token)match(input,NOTE,FOLLOW_NOTE_in_chord457); 
            n_tree = 
            (Object)adaptor.create(n)
            ;
            adaptor.addChild(root_0, n_tree);


            char_literal35=(Token)match(input,29,FOLLOW_29_in_chord459); 
            char_literal35_tree = 
            (Object)adaptor.create(char_literal35)
            ;
            adaptor.addChild(root_0, char_literal35_tree);



                                    principale.writeChord((n!=null?n.getText():null));
                                   

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "chord"


    public static class powerchord_return extends ParserRuleReturnScope {
